working on iOS bug

--- a/src/components/animated_letters/index.scss
+++ b/src/components/animated_letters/index.scss
@@ -33,7 +33,7 @@
 
 @media screen and (max-width: 700px) {
     .text-animate {
-        // display: relative;
-        // animation: none;
+        display: relative;
+        opacity: 1;
     }
 }
