--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -16,15 +16,6 @@
         margin: 0;
         font-family: 'Coolvetica';
         font-weight: 400;
-
-        img {
-            margin-left: 20px;
-            opacity: 0;
-            width: 32px;
-            height: auto;
-            animation: rotateIn 1s linear both;
-            animation-delay: 1.4s;
-        }
     }
 
     h2 {
@@ -85,15 +76,6 @@
     
             &:after {
                 display: none;
-            }
-    
-            img {
-                margin-left: 20px;
-                opacity: 0;
-                width: 32px;
-                height: auto;
-                animation: rotateIn 1s linear both;
-                animation-delay: 1.4s;
             }
         }
     
