--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -37,7 +37,9 @@
     z-index: 1;
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
+    -webkit-animation: fadeIn 1s forwards;
     animation-delay: 1s;
+    -webkit-animation-delay: 1s;
 }
 
 .container.contact-page,
